--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     background-color: rgb(238, 236, 236);
 }
 
-#guess-input {
+input {
     padding: 1.3rem;
     border: 1px solid lightgray;
 }
@@ -18,11 +18,9 @@ body {
 }
 
 #guess-btn {
-    font-size: 1.3rem 1.5rem;
-    padding: 1.3rem;
+    font-size: 1.3rem;
     background-color: #fff;
     text-transform: uppercase;
     letter-spacing: 2px;
-    border: 1px solid lightgray;
     cursor: pointer;
 }
